[gd_scene load_steps=2 format=3 uid="uid://cb3y16ungo1gx"]

[ext_resource type="Script" uid="uid://y172gi4xwprr" path="res://scenes/main_scene.gd" id="1_echbf"]

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_echbf")

[node name="FileDialog" type="FileDialog" parent="."]

[node name="Editor" type="CodeEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -4.0
offset_right = 1108.0
offset_bottom = 451.0
grow_horizontal = 2
grow_vertical = 2
symbol_lookup_on_click = true
symbol_tooltip_on_hover = true
line_folding = true
gutters_draw_line_numbers = true
indent_use_spaces = true
indent_automatic = true
indent_automatic_prefixes = Array[String](["-"])
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
auto_brace_completion_pairs = {
"\"": "\"",
"[": "]"
}

[node name="Console_Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 471.0
offset_right = 802.0
offset_bottom = 649.0

[node name="Console" type="RichTextLabel" parent="Console_Panel"]
layout_mode = 0
offset_top = -1.0
offset_right = 776.0
offset_bottom = 144.0
focus_mode = 2
bbcode_enabled = true
selection_enabled = true

[node name="InputLine" type="LineEdit" parent="Console_Panel"]
layout_mode = 0
offset_left = 1.0
offset_top = 144.0
offset_right = 776.0
offset_bottom = 177.0
placeholder_text = "Console"
context_menu_enabled = false
emoji_menu_enabled = false
clear_button_enabled = true

[node name="CopyButton" type="Button" parent="Console_Panel"]
visible = false
layout_mode = 0
offset_left = 696.0
offset_top = 115.0
offset_right = 775.0
offset_bottom = 143.0
text = "Copy Logs"

[node name="Buttons_Panel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 802.0
offset_top = 471.0
offset_right = 1126.0
offset_bottom = 648.0

[node name="LoadButton" type="Button" parent="."]
layout_mode = 0
offset_left = 849.0
offset_top = 473.0
offset_right = 895.0
offset_bottom = 504.0
text = "Load"

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 802.0
offset_top = 473.0
offset_right = 846.0
offset_bottom = 504.0
text = "Save"

[node name="RunButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1063.0
offset_top = 473.0
offset_right = 1122.0
offset_bottom = 504.0
text = "Run"

[node name="CompileButton" type="Button" parent="."]
layout_mode = 0
offset_left = 997.0
offset_top = 473.0
offset_right = 1060.0
offset_bottom = 504.0
text = "Compile"

[node name="BuildButton" type="Button" parent="."]
layout_mode = 0
offset_left = 952.0
offset_top = 473.0
offset_right = 993.0
offset_bottom = 504.0
text = "Build"

[node name="BrowseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1060.0
offset_top = 617.0
offset_right = 1117.0
offset_bottom = 645.0
text = "Browse"

[node name="DotNetPathInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 804.0
offset_top = 618.0
offset_right = 1058.0
offset_bottom = 646.0
placeholder_text = "Dotnet Path"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 492.0
offset_top = 15.0
offset_right = 602.0
offset_bottom = 35.0
text = "Your Own Script."

[node name="Docs" type="Button" parent="."]
layout_mode = 0
offset_left = 804.0
offset_top = 583.0
offset_right = 866.0
offset_bottom = 617.0
text = "Docs"

[connection signal="pressed" from="Docs" to="." method="_on_docs_pressed"]
